# MLOP

./: .gitignore  .pre-commit-config.yaml  LICENSE  data.dvc  pyproject.toml  requirements.txt  setup.py  trainer.dockerfile
.dvc/: config
.github/: dependabot.yaml
.github/workflows/: cml_data.yaml  pre_commit.yaml  tests.yaml
MLOPS/MNIST_corrupt/models/: epoch=1-step=186-v1.ckpt  epoch=1-step=186-v2.ckpt  epoch=1-step=186.ckpt
MNIST_corrupt/: data.py  dataset.py  dataset_statistics.py  main.py  model.py  models.dvc  utils.py
MNIST_corrupt/conf/: model_conf.yaml  training_conf.yaml
MNIST_corrupt/conf/experiment/: exp1.yaml  exp2.yaml
MNIST_corrupt/models/: epoch=5-step=558.ckpt  epoch=9-step=930.ckpt  model.pt
MNIST_corrupt/tests/: __init__.py  test_class.py  test_data.py  test_exceptiongroup.py  test_model.py  test_training.py
outputs/2025-01-14/13-06-12/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-14/13-07-21/.hydra/: hydra.yaml
outputs/2025-01-14/13-14-46/.hydra/: hydra.yaml
wandb/: latest-run
wandb/run-20250114_130613-znzldsh2/: run-znzldsh2.wandb
wandb/run-20250114_130613-znzldsh2/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250114_130721-vpt0hl0v/: run-vpt0hl0v.wandb
wandb/run-20250114_130721-vpt0hl0v/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250114_131447-i3234hg9/: run-i3234hg9.wandb
wandb/run-20250114_131447-i3234hg9/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
